--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>Loading...</title>
+      <meta http-equiv = "refresh" content = "2; url = https://maxtyson123.github.io/Downloads/Website/Redirect.html" />
+   </head>
+   <body>
+      <h1>Typewriter</h1>
+
+<button onclick="typeWriter()">Click me</button>
+
+<p id="demo"></p>
+
+<script>
+var i = 0;
+var txt = 'Fetching database.......................................COMPLETE';
+var speed = 50;
+
+function typeWriter() {
+  if (i < txt.length) {
+    document.getElementById("demo").innerHTML += txt.charAt(i);
+    i++;
+    setTimeout(typeWriter, speed);
+  }
+}
+</script>
+
+   </body>
+</html>
