--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
    <head>
       <title>Loading...</title>
-      <meta http-equiv = "refresh" content = "15; url = https://maxtyson123.github.io/Downloads/Website/Redirect.html" />
+      <meta http-equiv = "refresh" content = "15; url = nav.html" />
    </head>
    <style>
    
