--- a/nav.html
+++ b/nav.html
@@ -7,9 +7,10 @@
 <body>
     <nav>
         <ul>
-            <li><a href="http://maxtyson123.github.io/Website/">Websites</a></li>
-            <li><a href="https://maxtyson123.github.io/Games/">Games</a></li>
-            <li><a href="news.html">Coming Soon</a></li>
+		<center><h1>PAGE IN DEVOLPMENT, TRY ONE OF THEESE SITES</h1></center>
+            <li><a href="https://maxtyson123.github.io/Website/Website_3.6/">Main Site</a></li>
+            <li><a href="https://maxtyson123.github.io/Website/Football/">Football</a></li>
+            <li><a href="https://maxtyson123.github.io/Downloads/">Download Pages</a></li>
         </ul>
     </nav>
 </body>
