--- a/nav.html
+++ b/nav.html
@@ -8,8 +8,8 @@
     <nav>
         <ul>
 		<center><h1>PAGE IN DEVOLPMENT, TRY ONE OF THEESE SITES</h1></center>
-            <li><a href="https://maxtyson123.github.io/Website/Website_3.6/">Main Site</a></li>
-            <li><a href="https://maxtyson123.github.io/Website/Football/">Football</a></li>
+            <li><a href="https://maxtyson123.github.io/Website/">Website</a></li>
+            <li><a href="https://maxtyson123.github.io/Games/">Games</a></li>
             <li><a href="https://maxtyson123.github.io/Downloads/">Download Pages</a></li>
         </ul>
     </nav>
