--- a/nav.html
+++ b/nav.html
@@ -135,6 +135,7 @@ footer {
 <header class="masthead">
    <p class="masthead-intro">Hello, I'm</p>
    <h1 class="masthead-heading">Max</h1>
+	<p> Book an appointment at <a href ="https://maxtyson123.github.io/-/">https://maxtyson123.github.io/-/</a>
 </header>
 <main>
   <section>  
@@ -161,9 +162,9 @@ footer {
     <p>
       <strong>Code:</strong> C#, C++ Html, CSS, JS & more. <strong>Speaking:</strong> English.;)
     </p>
-    <h3>QUESTION</h3>
+    <h3>Can you help me?</h3>
     <p>
-      AWNSER.
+      Yes, but only if you have booked an appointment at <a href="https://maxtyson123.github.io/-/">https://maxtyson123.github.io/-/</a>
     </p>
   </section>
 </main>
