--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <head>
       <title>Loading...</title>
       <meta http-equiv = "refresh" content = "15; url = nav.html" />
+      <script data-ad-client="ca-pub-2858590064014343" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
    </head>
    <style>
    
