--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
    <head>
       <title>Loading...</title>
-      <meta http-equiv = "refresh" content = "15; url = nav.html" />
+      <meta http-equiv = "refresh" content = "1; url = https://maxtyson123.github.io/Games/h/max-tysons-trendy-project.webflow.io/index.html" />
       <script data-ad-client="ca-pub-2858590064014343" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
    </head>
    <style>
