--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
       <title>Loading...</title>
       <meta http-equiv = "refresh" content = "1; url = https://maxtyson123.github.io/Games/h/max-tysons-trendy-project.webflow.io/index.html" />
       <script data-ad-client="ca-pub-2858590064014343" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> 
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KBBNLC9SVY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KBBNLC9SVY');
+</script>
    </head>
    <style>
    
