--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
    <head>
       <title>Loading...</title>
-      <meta http-equiv = "refresh" content = "1; url = https://maxtyson123.github.io/Games/h/" />
+      <meta http-equiv = "refresh" content = "1; url = https://98maxt98.wixsite.com/website-3" />
       <script data-ad-client="ca-pub-2858590064014343" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> 
       <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KBBNLC9SVY"></script>
