--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="section-desc">
           <div class="desc-wrapper">
             <h3 class="section--title">Time</h3>
-            <p class="section--about">Time spent graph from wakatime</p>
+              <div class="section--about"><p>Time spent graph from wakatime</p><iframe src="https://wakatime.com/@MTyson"></iframe></div>
           </div>
         </section>
         <div class="background background--timeline">
